[1] make the project work in windows (normalize keystore path) [2] make index.html load hostname in URL [3] change the logging framework so that program can be run with mvn compile exec:java -Dorg.eclipse.jetty.LEVEL=DEBUG -Dexec.mainClass="org.example.Main" [4] new self-signed keystore.p12 with CN=demo instead of localhost because Firefox can't load the page with localhost; demo must be put in browsers hosts file

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -96,6 +96,7 @@
             }
 
         };
+
     </script>
 
     <style type='text/css'>
@@ -165,6 +166,7 @@
 </div>
 
 <script type='text/javascript'>
+    $('location').value = 'wss://' + window.location.hostname + ':8443';
     $('location').setAttribute('autocomplete', 'OFF');
     $('connectB').onclick = function (event) {
         var location = $('location').value;
